--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link href="css/style.css" rel="stylesheet">
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="images/Logo_MD.png" type="image/x-icon">
+  <link rel="icon" href="images/Logo_MD.png" type="image/x-icon">
 
 </head>
 
