--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <br><strong>A/B testing</strong>: Nous co-construisons ensemble vos a/b tests dont nous assurons la mise en place, le suivi et la restitution des résultats.<br>
 
-<br>Au cours de mes études j’ai eu la chance d’avoir des matières liées à la webanalyse et ainsi utilisé quelques fois les  outils concernés. Cependant, je dirais que 85% des connaissances que je détiens actuellement m’ont été transmises au cours de cette première année d’alternance.<br>J’ai eu la chance de découvrir l'ensemble des étapes d’un projet analytics, que ce soit du lancement avec le client à la mise en production. J’ai pu dans un premier temps apprendre la rédaction d’un plan de marquage détaillée. Par la suite, j'ai appris comment <strong>configurer un compte Google Analytics et Google Tag manager.</strong><br>
+<br>Au cours de mes études j’ai eu la chance d’avoir des matières liées à la webanalyse et ainsi utilisé quelques fois les  outils concernés. Cependant, je dirais que 85% des connaissances que je détiens actuellement m’ont été transmises au cours de mon d’alternance.<br>J’ai eu la chance de découvrir l'ensemble des étapes d’un projet analytics, que ce soit du lancement avec le client à la mise en production. J’ai pu dans un premier temps apprendre la rédaction d’un plan de marquage détaillée. Par la suite, j'ai appris comment <strong>configurer un compte Google Analytics et Google Tag manager.</strong><br>
 
 <br>Au cours de mes études j'ai eu la chance d'utiliser à plusieurs reprises l'outil <strong>Google data studio</strong>. En revanche, je ne savais pas que l'outil proposait un gros nombre de fonctionnalités et de possibilités comme j'ai pu le constater cette année au cours de mon alternance.Cela m'a permis de mettre en pratique l'ensemble de ces nouveautés sur les différents dashboard que j'ai pu élaboré au cours de mon master.<br>
 
@@ -136,6 +136,8 @@ Ci-dessous, vous trouverez un exemple de dashboard réalisé lors d'un cours de 
   <iframe width="1150" height="750" margin src="https://datastudio.google.com/embed/reporting/7f2565cf-1e9c-41e1-9fdf-89cbda850c09/page/HfeBC" frameborder="purple" style="border:6" allowfullscreen></iframe>
   </section>
 </section>
+
+<br> test <br>
 
 <!-- clients -->
 <section class="section">
