--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@ Ci-dessous, vous trouverez un exemple de dashboard réalisé lors d'un cours de 
   </section>
 </section>
 
-<br> test <br>
+<p>Geckos are a group of usually small, usually nocturnal lizards. They are found on every continent except Australia.</p>
 
 <!-- clients -->
 <section class="section">
