--- a/portfolio.html
+++ b/portfolio.html
@@ -105,6 +105,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <p>Cette année a été ma première expérience dans une start-up et je peux voir la différence entre une agence de 30 personnes et une agence de 5 personnes. Le faible nombre de salariés permet d'interagir beaucoup plus facilement avec chacun d'entre eux et aussi de connaître les personnes avec lesquelles on travaille au quotidien. Travailler avec un faible nombre de salariés permet également d’échanger sur différents sujets et thématiques beaucoup plus facilement. La hiérarchie est moins visible lorsque l'équipe est réduite en terme d'effectif et ainsi facilite la communication entre tous les salariés peu importe le poste. </p><br>
 
         <p>Cette expérience s’inscrit parfaitement dans le cadre de mon projet professionnel. A mi chemin entre la data pure et l’UX, avoir une expérience en web analyse me permet de consolider mes connaissances acquises aux cours de mes études en webmarketing et UX. Cette expérience est un réel tremplin qui me permettra par la suite d'approfondir mes connaissances en data analyse et ainsi avoir une expérience dans ce domaine également afin d’élargir mes connaissances.</p><br>
+        
+        <p>Mon alternance touchant à sa fin en septembre 2022, j'ai décidé de faire une pause après mes études afin d'en profiter pour voyager et me reposer avant d'intégrer le marché du travail.</p><br>
 
 
       <div class="remerciement">
